# agenda

./: .env.example  .gitignore  AGENTS.md  COMMANDS.md  README.md  main.py  menu_principal.py  pyproject.toml  requirements.txt  test.xlsx
fase1_db_infra/: init_db.sql  progress.md  spec.md
fase2_crud_core/: instalacion.md  progress.md  spec.md
fase3_busqueda_reportes/: instalacion.md  progress.md  spec.md
fase4_menu_ui/: guia_cli.md  instalacion.md  progress.md  spec.md
fase5_entrega_final/: progress.md  spec.md
frontend/: package-lock.json
frontend/src/app/: globals.css  page.module.css  page.tsx
frontend/src/lib/: api.ts
scripts/: __init__.py  init_db.py  setup_server.py  test_suite.py
src/: __init__.py  api.py  buscador.py  crud_personas.py  database.py  exportadores.py  formularios.py  menu_principal.py  reportes.py  seed_db.py  vistas.py
tests/: __init__.py  conftest.py  test_buscador.py  test_crud_personas.py  test_database.py  test_exportadores.py  test_reportes.py
