[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-modular"
version = "0.1.0"
description = "Sistema de Gestión Modular con SQL Server y Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tu Nombre", email = "tu@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyodbc>=4.0.39",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
pd = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]
cli = [
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
]
all = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gestion-cli = "gestion_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration (requires real DB)"
]
